--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.6.1
+  google_maps_flutter_web: ^0.5.6+2
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +19,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+assets:
+  - .env
