--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="$API_KEY"/>
         <!-- Srac API-key: AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8 -->
         
         <activity
