--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.6.1
   google_maps_flutter_web: ^0.5.6+2
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
