--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -9,9 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^2.6.1
-  google_maps_flutter_web: ^0.5.6+2
   http: ^1.2.1
+  flutter_osm_plugin: ^1.0.3
 
 dev_dependencies:
   flutter_test:
